# python-gedcom7

./: README.md  setup.cfg
.github/workflows/: pypi.yml  test.yml
gedcom7/: __init__.py  cast.py  const.py  grammar.py  parser.py  types.py  util.py
test/: test_cast.py  test_parser.py  test_types.py  test_util.py
test/data/: maximal70.ged
