[metadata]
name = gedcom7
version = attr: gedcom7.__version__
author = David M. Straub
author_email = straub@protonmail.com
description = GEDCOM 7 parser
long_description = file: README.md
url = https://github.com/DavidMStraub/python-gedcom7
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
